--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
+    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
+    "server": "node server/www"
   },
   "dependencies": {
-    "vux": "^2.2.1",
     "fastclick": "^1.0.6",
-    "vuex-i18n": "^1.3.1",
-    "vuex": "^2.1.1",
+    "vue": "^2.2.2",
     "vue-router": "^2.2.0",
-    "vue": "^2.2.2"
+    "vuex": "^2.3.1",
+    "vuex-i18n": "^1.4.1",
+    "vux": "^2.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -93,5 +94,8 @@
     "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
   },
-  "browserslist": ["iOS >= 7", "Android >= 4.1"]
+  "browserslist": [
+    "iOS >= 7",
+    "Android >= 4.1"
+  ]
 }
