--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "es6-promise": "^4.1.1",
     "fastclick": "^1.0.6",
     "file-saver": "^1.3.3",
+    "moment": "^2.19.1",
     "vue": "^2.2.2",
     "vue-router": "^2.2.0",
     "vuex": "^2.3.1",
